// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ToggleCard stories snapshot > CustomStyling story renders and matches snapshot 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col rounded-xl py-6 relative gap-4 border-2 border-primary shadow-lg"
    data-slot="card"
  >
    <div
      class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6"
      data-slot="card-header"
    >
      <div
        class="leading-none font-semibold"
        data-slot="card-title"
        tabindex="0"
      >
        Custom Styled Card
      </div>
      <div
        class="text-muted-foreground text-sm"
        data-slot="card-description"
      >
        This card has custom styling
      </div>
      <div
        class="col-start-2 row-span-2 row-start-1 self-start justify-self-end"
        data-slot="card-action"
      >
        <button
          aria-label="Edit"
          class="inline-flex items-center justify-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-primary underline-offset-4 hover:underline h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer font-bold"
          data-size="sm"
          data-slot="button"
          data-variant="link"
        >
          Edit
        </button>
      </div>
    </div>
    <div
      class="px-6"
      data-slot="card-content"
    >
      <div
        class="space-y-2"
      >
        <div>
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
            data-slot="label"
          >
            Name
          </label>
          <p
            class="text-sm"
          >
            John Doe
          </p>
        </div>
        <div>
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
            data-slot="label"
          >
            Email
          </label>
          <p
            class="text-sm"
          >
            john@example.com
          </p>
        </div>
        <div>
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
            data-slot="label"
          >
            Phone
          </label>
          <p
            class="text-sm"
          >
            +1 (555) 123-4567
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ToggleCard stories snapshot > Default story renders and matches snapshot 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col rounded-xl border py-6 shadow-sm relative gap-4"
    data-slot="card"
  >
    <div
      class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6"
      data-slot="card-header"
    >
      <div
        class="leading-none font-semibold"
        data-slot="card-title"
        tabindex="0"
      >
        Contact Information
      </div>
      <div
        class="text-muted-foreground text-sm"
        data-slot="card-description"
      >
        Manage your contact details
      </div>
      <div
        class="col-start-2 row-span-2 row-start-1 self-start justify-self-end"
        data-slot="card-action"
      >
        <button
          aria-label="Edit"
          class="inline-flex items-center justify-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-primary underline-offset-4 hover:underline h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer font-bold"
          data-size="sm"
          data-slot="button"
          data-variant="link"
        >
          Edit
        </button>
      </div>
    </div>
    <div
      class="px-6"
      data-slot="card-content"
    >
      <div
        class="space-y-2"
      >
        <div>
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
            data-slot="label"
          >
            Name
          </label>
          <p
            class="text-sm"
          >
            John Doe
          </p>
        </div>
        <div>
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
            data-slot="label"
          >
            Email
          </label>
          <p
            class="text-sm"
          >
            john@example.com
          </p>
        </div>
        <div>
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
            data-slot="label"
          >
            Phone
          </label>
          <p
            class="text-sm"
          >
            +1 (555) 123-4567
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ToggleCard stories snapshot > DisableEdit story renders and matches snapshot 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col rounded-xl border py-6 shadow-sm relative gap-4"
    data-slot="card"
  >
    <div
      class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6"
      data-slot="card-header"
    >
      <div
        class="leading-none font-semibold"
        data-slot="card-title"
        tabindex="0"
      >
        Read-Only Information
      </div>
      <div
        class="text-muted-foreground text-sm"
        data-slot="card-description"
      >
        This information cannot be edited
      </div>
      <div
        class="col-start-2 row-span-2 row-start-1 self-start justify-self-end"
        data-slot="card-action"
      />
    </div>
    <div
      class="px-6"
      data-slot="card-content"
    >
      <div
        class="space-y-2"
      >
        <div>
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
            data-slot="label"
          >
            Name
          </label>
          <p
            class="text-sm"
          >
            John Doe
          </p>
        </div>
        <div>
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
            data-slot="label"
          >
            Email
          </label>
          <p
            class="text-sm"
          >
            john@example.com
          </p>
        </div>
        <div>
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
            data-slot="label"
          >
            Phone
          </label>
          <p
            class="text-sm"
          >
            +1 (555) 123-4567
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ToggleCard stories snapshot > Disabled story renders and matches snapshot 1`] = `
<div>
  <div
    aria-disabled="true"
    class="bg-card text-card-foreground flex flex-col rounded-xl border py-6 shadow-sm relative gap-0"
    data-slot="card"
  >
    <div
      class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6"
      data-slot="card-header"
    >
      <div
        class="leading-none font-semibold text-muted-foreground"
        data-slot="card-title"
        tabindex="0"
      >
        Account Settings
      </div>
      <div
        class="text-muted-foreground text-sm"
        data-slot="card-description"
      >
        This section is currently disabled
      </div>
      <div
        class="col-start-2 row-span-2 row-start-1 self-start justify-self-end"
        data-slot="card-action"
      />
    </div>
    <div
      class="px-6"
      data-slot="card-content"
    >
      <div
        class="space-y-2"
      >
        <div>
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
            data-slot="label"
          >
            Name
          </label>
          <p
            class="text-sm"
          >
            John Doe
          </p>
        </div>
        <div>
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
            data-slot="label"
          >
            Email
          </label>
          <p
            class="text-sm"
          >
            john@example.com
          </p>
        </div>
        <div>
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
            data-slot="label"
          >
            Phone
          </label>
          <p
            class="text-sm"
          >
            +1 (555) 123-4567
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ToggleCard stories snapshot > Loading story renders and matches snapshot 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col rounded-xl border py-6 shadow-sm relative gap-4"
    data-slot="card"
  >
    <div
      class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6"
      data-slot="card-header"
    >
      <div
        class="leading-none font-semibold"
        data-slot="card-title"
        tabindex="0"
      >
        Processing
      </div>
      <div
        class="text-muted-foreground text-sm"
        data-slot="card-description"
      >
        Saving your changes...
      </div>
      <div
        class="col-start-2 row-span-2 row-start-1 self-start justify-self-end"
        data-slot="card-action"
      >
        <button
          aria-label="Edit"
          class="inline-flex items-center justify-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-primary underline-offset-4 hover:underline h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer font-bold"
          data-size="sm"
          data-slot="button"
          data-variant="link"
        >
          Edit
        </button>
      </div>
    </div>
    <div
      class="px-6"
      data-slot="card-content"
    >
      <div
        class="space-y-2"
      >
        <div>
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
            data-slot="label"
          >
            Name
          </label>
          <p
            class="text-sm"
          >
            John Doe
          </p>
        </div>
        <div>
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
            data-slot="label"
          >
            Email
          </label>
          <p
            class="text-sm"
          >
            john@example.com
          </p>
        </div>
        <div>
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
            data-slot="label"
          >
            Phone
          </label>
          <p
            class="text-sm"
          >
            +1 (555) 123-4567
          </p>
        </div>
      </div>
    </div>
    <div
      class="absolute inset-0 z-10 rounded-xl bg-background/60"
    >
      <div
        class="flex h-full w-full items-center justify-center"
      >
        <div
          class="animate-spin rounded-full border-2 border-border border-t-primary size-6"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ToggleCard stories snapshot > LongContent story renders and matches snapshot 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col rounded-xl border py-6 shadow-sm relative gap-4"
    data-slot="card"
  >
    <div
      class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6"
      data-slot="card-header"
    >
      <div
        class="leading-none font-semibold"
        data-slot="card-title"
        tabindex="0"
      >
        Detailed Information
      </div>
      <div
        class="text-muted-foreground text-sm"
        data-slot="card-description"
      >
        This card contains a lot of information that might wrap to multiple lines
      </div>
      <div
        class="col-start-2 row-span-2 row-start-1 self-start justify-self-end"
        data-slot="card-action"
      >
        <button
          aria-label="Edit"
          class="inline-flex items-center justify-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-primary underline-offset-4 hover:underline h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer font-bold"
          data-size="sm"
          data-slot="button"
          data-variant="link"
        >
          Edit
        </button>
      </div>
    </div>
    <div
      class="px-6"
      data-slot="card-content"
    >
      <div
        class="space-y-2"
      >
        <div>
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
            data-slot="label"
          >
            Name
          </label>
          <p
            class="text-sm"
          >
            John Doe
          </p>
        </div>
        <div>
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
            data-slot="label"
          >
            Email
          </label>
          <p
            class="text-sm"
          >
            john@example.com
          </p>
        </div>
        <div>
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
            data-slot="label"
          >
            Phone
          </label>
          <p
            class="text-sm"
          >
            +1 (555) 123-4567
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ToggleCard stories snapshot > MultipleCards story renders and matches snapshot 1`] = `
<div>
  <div
    class="space-y-4"
  >
    <div
      class="bg-card text-card-foreground flex flex-col rounded-xl border py-6 shadow-sm relative gap-4"
      data-slot="card"
    >
      <div
        class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6"
        data-slot="card-header"
      >
        <div
          class="leading-none font-semibold"
          data-slot="card-title"
          tabindex="0"
        >
          Personal Information
        </div>
        <div
          class="text-muted-foreground text-sm"
          data-slot="card-description"
        >
          Your personal details
        </div>
        <div
          class="col-start-2 row-span-2 row-start-1 self-start justify-self-end"
          data-slot="card-action"
        >
          <button
            aria-label="Edit"
            class="inline-flex items-center justify-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-primary underline-offset-4 hover:underline h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer font-bold"
            data-size="sm"
            data-slot="button"
            data-variant="link"
          >
            Edit
          </button>
        </div>
      </div>
      <div
        class="px-6"
        data-slot="card-content"
      >
        <div
          class="space-y-2"
        >
          <div>
            <label
              class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
              data-slot="label"
            >
              Name
            </label>
            <p
              class="text-sm"
            >
              John Doe
            </p>
          </div>
          <div>
            <label
              class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
              data-slot="label"
            >
              Email
            </label>
            <p
              class="text-sm"
            >
              john@example.com
            </p>
          </div>
          <div>
            <label
              class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
              data-slot="label"
            >
              Phone
            </label>
            <p
              class="text-sm"
            >
              +1 (555) 123-4567
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bg-card text-card-foreground flex flex-col rounded-xl border py-6 shadow-sm relative gap-4"
      data-slot="card"
    >
      <div
        class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6"
        data-slot="card-header"
      >
        <div
          class="leading-none font-semibold"
          data-slot="card-title"
          tabindex="0"
        >
          Billing Address
        </div>
        <div
          class="text-muted-foreground text-sm"
          data-slot="card-description"
        >
          Where to send invoices
        </div>
        <div
          class="col-start-2 row-span-2 row-start-1 self-start justify-self-end"
          data-slot="card-action"
        >
          <button
            aria-label="Edit"
            class="inline-flex items-center justify-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-primary underline-offset-4 hover:underline h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer font-bold"
            data-size="sm"
            data-slot="button"
            data-variant="link"
          >
            Edit
          </button>
        </div>
      </div>
      <div
        class="px-6"
        data-slot="card-content"
      >
        <div
          class="space-y-2"
        >
          <div>
            <label
              class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
              data-slot="label"
            >
              Name
            </label>
            <p
              class="text-sm"
            >
              John Doe
            </p>
          </div>
          <div>
            <label
              class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
              data-slot="label"
            >
              Email
            </label>
            <p
              class="text-sm"
            >
              john@example.com
            </p>
          </div>
          <div>
            <label
              class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
              data-slot="label"
            >
              Phone
            </label>
            <p
              class="text-sm"
            >
              +1 (555) 123-4567
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bg-card text-card-foreground flex flex-col rounded-xl border py-6 shadow-sm relative gap-4"
      data-slot="card"
    >
      <div
        class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6"
        data-slot="card-header"
      >
        <div
          class="leading-none font-semibold"
          data-slot="card-title"
          tabindex="0"
        >
          Shipping Address
        </div>
        <div
          class="text-muted-foreground text-sm"
          data-slot="card-description"
        >
          Where to send packages
        </div>
        <div
          class="col-start-2 row-span-2 row-start-1 self-start justify-self-end"
          data-slot="card-action"
        >
          <button
            aria-label="Edit"
            class="inline-flex items-center justify-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-primary underline-offset-4 hover:underline h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer font-bold"
            data-size="sm"
            data-slot="button"
            data-variant="link"
          >
            Edit
          </button>
        </div>
      </div>
      <div
        class="px-6"
        data-slot="card-content"
      >
        <div
          class="space-y-2"
        >
          <div>
            <label
              class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
              data-slot="label"
            >
              Name
            </label>
            <p
              class="text-sm"
            >
              John Doe
            </p>
          </div>
          <div>
            <label
              class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
              data-slot="label"
            >
              Email
            </label>
            <p
              class="text-sm"
            >
              john@example.com
            </p>
          </div>
          <div>
            <label
              class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
              data-slot="label"
            >
              Phone
            </label>
            <p
              class="text-sm"
            >
              +1 (555) 123-4567
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ToggleCard stories snapshot > StaticView story renders and matches snapshot 1`] = `
<div>
  <div
    aria-disabled="true"
    class="bg-card text-card-foreground flex flex-col rounded-xl border py-6 shadow-sm relative gap-0"
    data-slot="card"
  >
    <div
      class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6"
      data-slot="card-header"
    >
      <div
        class="leading-none font-semibold text-muted-foreground"
        data-slot="card-title"
        tabindex="0"
      >
        Static Information
      </div>
      <div
        class="text-muted-foreground text-sm"
        data-slot="card-description"
      >
        This card cannot be edited
      </div>
      <div
        class="col-start-2 row-span-2 row-start-1 self-start justify-self-end"
        data-slot="card-action"
      />
    </div>
    <div
      class="px-6"
      data-slot="card-content"
    >
      <div
        class="space-y-2"
      >
        <div>
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
            data-slot="label"
          >
            Status
          </label>
          <p
            class="text-sm"
          >
            Active
          </p>
        </div>
        <div>
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
            data-slot="label"
          >
            Last Updated
          </label>
          <p
            class="text-sm"
          >
            January 15, 2024
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ToggleCard stories snapshot > WithoutDescription story renders and matches snapshot 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col rounded-xl border py-6 shadow-sm relative gap-4"
    data-slot="card"
  >
    <div
      class="@container/card-header grid auto-rows-min gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 grid-rows-1 items-center"
      data-slot="card-header"
    >
      <div
        class="leading-none font-semibold"
        data-slot="card-title"
        tabindex="0"
      >
        Shipping Address
      </div>
      <div
        class="col-start-2 row-start-1 justify-self-end row-span-1 self-center"
        data-slot="card-action"
      >
        <button
          aria-label="Edit"
          class="inline-flex items-center justify-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-primary underline-offset-4 hover:underline h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer font-bold"
          data-size="sm"
          data-slot="button"
          data-variant="link"
        >
          Edit
        </button>
      </div>
    </div>
    <div
      class="px-6"
      data-slot="card-content"
    >
      <div
        class="space-y-2"
      >
        <div>
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
            data-slot="label"
          >
            Name
          </label>
          <p
            class="text-sm"
          >
            John Doe
          </p>
        </div>
        <div>
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
            data-slot="label"
          >
            Email
          </label>
          <p
            class="text-sm"
          >
            john@example.com
          </p>
        </div>
        <div>
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
            data-slot="label"
          >
            Phone
          </label>
          <p
            class="text-sm"
          >
            +1 (555) 123-4567
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
